--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 BOT_TOKEN = 5663032678:AAHhuiyW_fblKhkJQ1p-I1YMMDjO82zt5NM
+
+ip = localhost
+PGUSER = postgres
+PGPASSWORD = dias
+DATABASE = namaz
+
